revisit dependencies